--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ng2-twitter": "^0.3.0",
     "ngtweet": "^0.6.2",
     "ngx-facebook": "^2.4.0",
+    "ngx-parallax": "^2.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
