--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "jquery.localscroll": "^2.0.0",
+    "jquery.scrollto": "^2.1.2",
     "ng2-twitter": "^0.3.0",
     "ngtweet": "^0.6.2",
     "ngx-facebook": "^2.4.0",
